plugins {
	id "com.github.johnrengelman.shadow" version "7.1.2"
	id "java"
	id "eclipse"
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'it.unimi.dsi:fastutil-core:8.5.6'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    implementation 'com.github.FireMasterK.NewPipeExtractor:NewPipeExtractor:da0c4919d1ac2dee9d5227a5ddb9f26111804914'
    implementation 'com.github.TeamNewPipe:nanojson:1d9e1aea9049fc9f85e68b43ba39fe7be1c1f751'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
    implementation 'org.json:json:20211205'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.5'
    implementation 'com.rometools:rome:1.18.0'
    implementation 'com.github.ipfs:java-ipfs-http-client:v1.3.3'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'io.activej:activej-common:5.1'
    implementation 'io.activej:activej-http:5.1'
    implementation 'io.activej:activej-boot:5.1'
    implementation 'io.activej:activej-specializer:5.1'
    implementation 'io.activej:activej-launchers-http:5.1'
    implementation 'org.hsqldb:hsqldb:2.6.1'
    implementation 'org.postgresql:postgresql:42.3.2'
    implementation 'org.hibernate:hibernate-core:5.6.5.Final'
    implementation 'org.hibernate:hibernate-hikaricp:5.6.5.Final'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'org.springframework.security:spring-security-crypto:5.6.1'
    implementation 'commons-logging:commons-logging:1.2'
}

shadowJar {
    // minimize()
}

jar {
  manifest {
    attributes(
      'Main-Class': 'me.kavin.piped.Main'
    )
  }
}

group = 'me.kavin.piped'
version = '1.0'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
